Thymeleaf still Sucks

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top"
           >
           <!--Navbar logo-->
-          <img src="../static/images/header-bg.jpg" th:src="@{/images/header-bg.jpg}">
+          <img src="../static/images/aficionodo-logo.png" th:src="@{/images/aficionodo-logo.png}">
         </a>
         <button
           class="navbar-toggler navbar-toggler-right"
@@ -110,8 +110,8 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/01-thumbnail.jpg"
-                  alt=""
+                  src="../static/images/01-thumbnail.jpg"
+                  th:src="@{/images/01-thumbnail.jpg}"
                 />
               </a>
               <div class="portfolio-caption">
@@ -136,8 +136,8 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/02-thumbnail.jpg"
-                  alt=""
+                  src="../static/images/02-thumbnail.jpg"
+                  th:src="@{/images/02-thumbnail.jpg}"
                 />
               </a>
               <div class="portfolio-caption">
@@ -162,8 +162,8 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/03-thumbnail.jpg"
-                  alt=""
+                  src="../static/images/03-thumbnail.jpg"
+                  th:src="@{/images/03-thumbnail.jpg}"
                 />
               </a>
               <div class="portfolio-caption">
@@ -188,8 +188,8 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/04-thumbnail.jpg"
-                  alt=""
+                  src="../static/images/04-thumbnail.jpg"
+                  th:src="@{/images/04-thumbnail.jpg}"
                 />
               </a>
               <div class="portfolio-caption">
@@ -214,8 +214,8 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/05-thumbnail.jpg"
-                  alt=""
+                  src="../static/images/05-thumbnail.jpg"
+                  th:src="@{/images/05-thumbnail.jpg}"
                 />
               </a>
               <div class="portfolio-caption">
@@ -240,8 +240,8 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="assets/img/portfolio/06-thumbnail.jpg"
-                  alt=""
+                  src="../static/images/06-thumbnail.jpg"
+                  th:src="@{/images/06-thumbnail.jpg}"
                 />
               </a>
               <div class="portfolio-caption">
