--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -72,6 +72,20 @@
         </div>
       </div>
     </nav>
+    <!--<header>
+      <div class="overlay"></div>
+      <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <source src="https://vimeo.com/489002061" type="video/mp4" th:src="@{/images/01-thumbnail.jpg}">
+      </video>
+      <div class="container h-100">
+        <div class="d-flex h-100 text-center align-items-center">
+          <div class="w-100 text-white">
+            <h1 class="display-3">This Isn't Your Fathers Suit.</h1>
+            <p class="lead mb-0">Dapper & Dopeness Personified</p>
+          </div>
+        </div>
+      </div>
+    </header>-->
     <!-- Masthead-->
     <header class="masthead">
       <div class="container">
