--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,10 +63,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About Us</a>
+              <!--<a class="nav-link js-scroll-trigger" href="src/main/resources/templates/about.html">About Us</a> -->
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="src/main/resources/templates/contact.html">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -95,7 +95,7 @@
         </div>
         <a
           class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
-          href="#services"
+          href="src/main/resources/templates/about.html"
           >Tell Me More</a
         >
       </div>
@@ -141,7 +141,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="#portfolioModal2"
+                href="src/main/resources/templates/collection.html"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -167,7 +167,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="#portfolioModal3"
+                href="src/main/resources/templates/collection.html"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -193,7 +193,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="#portfolioModal4"
+                href="src/main/resources/templates/collection.html"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -219,7 +219,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="#portfolioModal5"
+                href="src/main/resources/templates/collection.html"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -245,7 +245,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="#portfolioModal6"
+                href="src/main/resources/templates/collection.html"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -266,8 +266,18 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="portfolio-item">
+              <a
+                class="portfolio-link"
+                data-toggle="modal"
+                href="src/main/resources/templates/collection.html"
+              >
+                <div class="portfolio-hover">
+                  <div class="portfolio-hover-content">
+                    <i class="fas fa-plus fa-3x"></i>
+                  </div>
+                </div>
     </section>
     <!-- Footer-->
     <footer class="footer py-4">
