--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"
-          ><img src="assets/img/navbar-logo.svg" alt=""
+          ><img src="assets/ing/aficionodo-logo.png" alt=""
         /></a>
         <button
           class="navbar-toggler navbar-toggler-right"
