--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,7 +63,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <!--<a class="nav-link js-scroll-trigger" href="src/main/resources/templates/about.html">About Us</a> -->
+              <!-- <a class="nav-link js-scroll-trigger" href="src/main/resources/templates/about.html">About Us</a> -->
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="src/main/resources/templates/contact.html">Contact Us</a>
@@ -245,7 +245,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="src/main/resources/templates/collection.html"
+                href="#portfolioModal6"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -266,18 +266,8 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-item">
-              <a
-                class="portfolio-link"
-                data-toggle="modal"
-                href="src/main/resources/templates/collection.html"
-              >
-                <div class="portfolio-hover">
-                  <div class="portfolio-hover-content">
-                    <i class="fas fa-plus fa-3x"></i>
-                  </div>
-                </div>
+        </div>
+      </div>
     </section>
     <!-- Footer-->
     <footer class="footer py-4">
@@ -295,12 +285,12 @@
               ><i class="fab fa-linkedin-in"></i
             ></a>
           </div>
-          <div class="col-lg-4 text-lg-right">
+          <!-- <div class="col-lg-4 text-lg-right">
             <a class="mr-3" href="#!">Privacy Policy</a>
             <a href="#!">Terms of Use</a>
           </div>
         </div>
-      </div>
+      </div> -->
     </footer>
         <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
