--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -95,11 +95,11 @@
         </div>
         <a
           class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
-          href="src/main/resources/templates/about.html"
-          >Tell Me More</a
+          href="/about.html">Tell Me More</a
         >
       </div>
     </header>
+      
     <!-- (Collections) Portfolio Grid-->
     <section class="page-section bg-light" id="portfolio">
       <div class="container">
@@ -112,6 +112,7 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6 mb-4">
             <div class="portfolio-item">
+              <!--Collection 1-->
               <a
                 class="portfolio-link"
                 data-toggle="modal"
@@ -138,6 +139,7 @@
           </div>
           <div class="col-lg-4 col-sm-6 mb-4">
             <div class="portfolio-item">
+              <!--Collection 2-->
               <a
                 class="portfolio-link"
                 data-toggle="modal"
@@ -164,6 +166,7 @@
           </div>
           <div class="col-lg-4 col-sm-6 mb-4">
             <div class="portfolio-item">
+              <!--Collection 3-->
               <a
                 class="portfolio-link"
                 data-toggle="modal"
@@ -190,6 +193,7 @@
           </div>
           <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
             <div class="portfolio-item">
+              <!--Collection 4-->
               <a
                 class="portfolio-link"
                 data-toggle="modal"
@@ -216,6 +220,7 @@
           </div>
           <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
             <div class="portfolio-item">
+              <!--Collection 5-->
               <a
                 class="portfolio-link"
                 data-toggle="modal"
@@ -242,10 +247,11 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
+              <!--Collection 6-->
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="#portfolioModal6"
+                href="src/main/resources/templates/collection.html"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
