--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -116,7 +116,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="#portfolioModal1"
+                href="Collection"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -247,11 +247,11 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
-              <!--Collection 6-->
+              <!--Collection -->
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="src/main/resources/templates/collection.html"
+                href="#portfolioModal6"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
