--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="../css/stylesheet.css" type="text/css" rel="stylesheet" th:href="@{../css/stylesheet.css}" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -27,8 +27,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About Us</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/about">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,8 +36,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-            <div class="masthead-heading text-uppercase">Motley</div>
-            <div class="masthead-subheading">Mischievously Stylish</div>
+            <div class="masthead-heading text-uppercase">Collections</div>
+            <div class="masthead-subheading">Select Your Palette</div>
                 <!--<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>-->
             </div>
         </header>
