--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
               <!-- <a class="nav-link js-scroll-trigger" href="src/main/resources/templates/about.html">About Us</a> -->
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="src/main/resources/templates/contact.html">Contact Us</a>
+              <a class="nav-link js-scroll-trigger" href="/contact">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -93,10 +93,7 @@
         <div class="masthead-heading text-uppercase">
           This Isn't Your Fathers Suit
         </div>
-        <a
-          class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
-          href="/about.html">Tell Me More</a
-        >
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/about">Tell Me More</a>
       </div>
     </header>
       
@@ -116,7 +113,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="Collection"
+                href="/collection"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -143,7 +140,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="src/main/resources/templates/collection.html"
+                href="/collection"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -170,7 +167,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="src/main/resources/templates/collection.html"
+                href="/collection"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -197,7 +194,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="src/main/resources/templates/collection.html"
+                href="/collection"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -224,7 +221,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="src/main/resources/templates/collection.html"
+                href="/collection"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -247,11 +244,11 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
-              <!--Collection -->
+              <!--Collection 6-->
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="#portfolioModal6"
+                href="collection"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
