Most Recent Changes

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -59,7 +59,10 @@
 
 		<div class="bio">
 			
-			<p>We pride ourselves on providing the highest <a href="#">Quality</a> product available. We are the preferred clothier of <a href="#">Distinguished and Refined</a> gentlemen world-wide. Our product is <a href="#">Second to None</a> and we place <a href="#">Brand Integrity</a> above all else. Make no mistake, This is Not Your Father’s Suit. Unless, of course, he's an Aficionado.</p>
+            <p>We pride ourselves on providing the highest <a href="#">Quality Product</a> available. 
+                We are the preferred clothier of <a href="#">Distinguished and Refined</a> gentlemen world-wide. 
+                Our product is <a href="#">Second to None</a> and we place <a href="#">Brand Integrity</a> above all else. Make no mistake, 
+                This is Not Your Father’s Suit. Unless, of course, he wears Aficionado.</p>
 
 		</div>
 
