--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -25,7 +25,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="/Index"
+        <a class="navbar-brand js-scroll-trigger" href="/"
           >
           <!--Navbar logo-->
           <img src="../static/images/aficionodo-logo.png" th:src="@{/images/aficionodo-logo.png}">
@@ -37,8 +37,7 @@
           data-target="#navbarResponsive"
           aria-controls="navbarResponsive"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars ml-1"></i>
         </button>
@@ -56,20 +55,15 @@
     </nav>
 	<!-- Content Container-->
 	<div class="me-content">
-
 		<div class="bio">
-			
             <p>We pride ourselves on providing the highest <a href="#">Quality Product</a> available. 
                 We are the preferred clothier of <a href="#">Distinguished and Refined</a> gentlemen world-wide. 
                 Our product is <a href="#">Second to None</a> and we place <a href="#">Brand Integrity</a> above all else. Make no mistake, 
-                This is Not Your Father’s Suit. Unless, of course, he wears Aficionado.</p>
-
+                This is Not Your Father’s Suit. Unless, of course, he wears Aficionado.
+            </p>
 		</div>
-
 	</div>
-
 </div>
 </section>
-
 </body>
 </html>
