--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -17,10 +17,10 @@
         <link href="../css/stylesheet.css" type="text/css" rel="stylesheet" th:href="@{../css/stylesheet.css}" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->
+        <!-- Navigation <img src="../static/images/aficionodo-logo.png" th:src="@{/images/aficionodo-logo.png}">-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">   
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="" /></a>
+                <a class="navbar-brand js-scroll-trigger" href="/"><img src="../static/images/aficionodo-logo.png" th:src="@{/images/aficionodo-logo.png}"></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ml-1"></i>
@@ -34,62 +34,104 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
+        <header class="mastheadthree">
             <div class="container">
-            <div class="masthead-heading text-uppercase">Collections</div>
-            <div class="masthead-subheading">Select Your Palette</div>
+            <div class="mastheadthree-heading text-uppercase">Collections</div>
+            <!-- <div class="mastheadthree-subheading">Select Your Palette</div> -->
                 <!--<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>-->
             </div>
         </header>
         <!-- (Collections) Portfolio Grid-->
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
-                <div class="text-center">
-                    <!--<h2 class="section-heading text-uppercase">Motley</h2>
-                    <h3 class="section-subheading text-muted">Mischievously Stylish</h3>-->
+              <div class="text-center">
+                <h2 class="section-heading text-uppercase">Select Your Palette</h2>
+                <h3 class="section-subheading text-muted">
+                </h3>
+              </div>
+              <div class="row">
+                <div class="col-lg-4 col-sm-6 mb-4">
+                  <div class="portfolio-item">
+                    <!--Image 1-->
+                    <a
+                      class="portfolio-link"
+                      data-toggle="modal"
+                      href="/collection"
+                    >
+                      <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                          <i class="fas fa-plus fa-3x"></i>
+                        </div>
+                      </div>
+                      <img
+                        class="img-fluid"
+                        src="../static/images/coll-1.jpg"
+                        th:src="@{/images/coll-1.jpg}"
+                      />
+                    </a>
+                    <div class="portfolio-caption">
+                      <div class="portfolio-caption-heading"></div>
+                      <div class="portfolio-caption-subheading text-muted">
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="" />
-                            </a>
-                            <div class="portfolio-caption">
-                            </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                  <div class="portfolio-item">
+                    <!--Image 2-->
+                    <a
+                      class="portfolio-link"
+                      data-toggle="modal"
+                      href="/collection"
+                    >
+                      <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                          <i class="fas fa-plus fa-3x"></i>
                         </div>
+                      </div>
+                      <img
+                        class="img-fluid"
+                        src="../static/coll-2.jpg"
+                        th:src="@{/images/coll-2.jpg}"
+                      />
+                    </a>
+                    <div class="portfolio-caption">
+                      <div class="portfolio-caption-heading"></div>
+                      <div class="portfolio-caption-subheading text-muted">
+                      </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="" />
-                            </a>
-                            <div class="portfolio-caption">
-                            </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                  <div class="portfolio-item">
+                    <!--Image 3-->
+                    <a
+                      class="portfolio-link"
+                      data-toggle="modal"
+                      href="/collection"
+                    >
+                      <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                          <i class="fas fa-plus fa-3x"></i>
                         </div>
+                      </div>
+                      <img
+                        class="img-fluid"
+                        src="../static/images/coll-3.jpg"
+                        th:src="@{/images/coll-3.jpg}"
+                      />
+                    </a>
+                    <div class="portfolio-caption">
+                      <div class="portfolio-caption-heading"></div>
+                      <div class="portfolio-caption-subheading text-muted">
+                      </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
-                            </a>
-                            <div class="portfolio-caption">
-                            </div>
-                        </div>
-                    </div>
+                  </div>
                 </div>
             </div>
             <div class="text-center">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  PALETTE SELECTION
+                PALETTE SELECTION
                 </button>
                 <br>
                 <br>
