--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -113,7 +113,7 @@
               <a
                 class="portfolio-link"
                 data-toggle="modal"
-                href="/collection"
+                href="/product"
               >
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
@@ -275,26 +275,20 @@
     <!-- Footer-->
     <footer class="footer py-4">
       <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-4 text-lg-left"></div>
-          <div class="col-lg-4 my-3 my-lg-0">
-            <a class="btn btn-dark btn-social mx-2" href="#!"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <a class="btn btn-dark btn-social mx-2" href="#!"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a class="btn btn-dark btn-social mx-2" href="#!"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
+          <div class="row align-items-center">
+              <div class="col-lg-4 text-lg-left">Copyright © Aficionado 2020</div>
+              <div class="col-lg-4 my-3 my-lg-0">
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+              <div class="col-lg-4 text-lg-right">
+                  <a class="mr-3" href="#!">Privacy Policy</a>
+                  <a href="#!">Terms of Use</a>
+              </div>
           </div>
-          <!-- <div class="col-lg-4 text-lg-right">
-            <a class="mr-3" href="#!">Privacy Policy</a>
-            <a href="#!">Terms of Use</a>
-          </div>
-        </div>
-      </div> -->
-    </footer>
+      </div>
+  </footer>
         <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
