Disregard last push (Fixed)

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Yinka Enoch Adedokun">
     <title>Login Page</title>
-    <link href="../css/stylesheet.css" type="text/css" rel="stylesheet" th:href="@{../css/stylesheet.css}" />
+    <link href="../css/stylesheet2.css" type="text/css" rel="stylesheet" th:href="@{../css/stylesheet2.css}" />
 </head>
 <body>
 	<!-- Main Content -->
