--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -128,8 +128,11 @@
                 />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading"></div>
+                <div class="portfolio-caption-heading">Marketing</div>
                 <div class="portfolio-caption-subheading text-muted">
+                    AHMAD RAMAAL
+                  </div>
+                <div class="portfolio-caption-subheading text-muted">a.ramaal@aficionado.com
                 </div>
               </div>
             </div>
@@ -154,8 +157,11 @@
                 />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading"></div>
+                <div class="portfolio-caption-heading">Vendor Relations</div>
                 <div class="portfolio-caption-subheading text-muted">
+                    TUNDE OKWIBI
+                  </div>
+                <div class="portfolio-caption-subheading text-muted">tundeo@aficionado.com
                 </div>
               </div>
             </div>
@@ -180,9 +186,12 @@
                 />
               </a>
               <div class="portfolio-caption">
-                <div class="portfolio-caption-heading"></div>
+                <div class="portfolio-caption-heading">General Inquiries</div>
                 <div class="portfolio-caption-subheading text-muted">
-                  
+                    MINA TANDARI
+                  </div>
+                <div class="portfolio-caption-subheading text-muted">
+                  tandarim@aficionado.com
                 </div>
               </div>
             </div>
