--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -100,11 +100,8 @@
     <section class="page-section bg-light" id="portfolio">
       <div class="container">
         <div class="text-center">
-          <h2 class="section-heading text-uppercase">How Can We Service You?</h2>
-          <p> As with everything else we do here at Aficionado, 
-              our dedication to serving our customers is paramount. 
-              Please do not hesitate to reach out to us with your inquiry. 
-              Someone from our team will address the matter with the utmost urgency.
+          <h2 class="section-heading text-uppercase">How Can We Serve You?</h2>
+          <p> Send us your inquiry. A member of our team will respond most urgently.
             </p>
         </div>
         <div class="row">
